InternexDev_Sandbox/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ACH_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Partner_Draw_Fee__c</fullName>
        <formula>IF( Draw_Fee__c == True, Partner_Draw_Fee__c * Funding_Requested__c,0)</formula>
        <inlineHelpText>Formula : Partner Draw Fee * Funding Requested</inlineHelpText>
        <label>Actual Partner Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Partner_Origination_Fee__c</fullName>
        <formula>IF( Origination_Fee__c == True,Partner_Origination_Fee__c * CA_Funding_Limit__c ,0)</formula>
        <inlineHelpText>Formula : Partner Origination Fee * Client-Account Facility Size</inlineHelpText>
        <label>Actual Partner Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Draw_Fee__c</fullName>
        <formula>IF(AND(Draw_Fee__c == True),MAX( Funding_Requested__c * Draw_Fee_Percentage__c , Minimum_Draw_fee__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Origination_Fee__c</fullName>
        <formula>IF( AND( Origination_Fee__c == True),MAX( CA_Funding_Limit__c * Origination_Fee_Percentage__c , Minimum_Origination_Fee__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Drawal_Fee_Percentage__c</fullName>
        <label>CA Drawal Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CA_Funding_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CA Funding Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Minimum_Drawal_fee__c</fullName>
        <label>CA Minimum Drawal fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Minimum_Origination_Fee__c</fullName>
        <label>CA Minimum Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Origination_Fee_Percentage__c</fullName>
        <label>CA Origination Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Account_Funding_Limit__c</fullName>
        <formula>Client_Account__r.Funding_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account Funding Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Funding Requests</relationshipLabel>
        <relationshipName>Funding_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Client_Account__r.Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Portal_Id__c</fullName>
        <formula>Client_Account__r.Client__r.Portal_External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Portal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Client_Account__r.Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Acceptance_Date__c</fullName>
        <defaultValue>$Setup.BusinessTransactionDate__c.Business_Transaction_Date__c</defaultValue>
        <label>CP Funded Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Interest_Rate__c</fullName>
        <label>Discount/Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Draw_Fee_Percentage__c</fullName>
        <formula>CA_Drawal_Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draw Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Draw_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draw Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Req_Number__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Status,&apos;Fully Funded&apos;),ISPICKVAL(Status,&apos;Funds Transferred&apos;)), Funding_Transaction_Count__c &gt;= 1), Funding_Requested__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If status equal to &apos;&apos;Fully Funded&apos; or &apos;Funds Transferred&apos; then Funds Released else 0</inlineHelpText>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Balance__c</fullName>
        <formula>Funding_Requested__c - Funds_Released__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Funding Requested - Funds Released</inlineHelpText>
        <label>Funding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Requested__c</fullName>
        <label>Funding Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Transaction_Count__c</fullName>
        <inlineHelpText>Formula: No of Transactions</inlineHelpText>
        <label>Funding Transaction Count</label>
        <summaryForeignKey>Funding_Transaction__c.Funding_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Funds_Released__c</fullName>
        <inlineHelpText>Formula: Sum of all Transactions.</inlineHelpText>
        <label>Funds Released</label>
        <summarizedField>Funding_Transaction__c.Fund__c</summarizedField>
        <summaryForeignKey>Funding_Transaction__c.Funding_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grade_Id__c</fullName>
        <externalId>true</externalId>
        <label>Grade Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Draw_fee__c</fullName>
        <formula>CA_Minimum_Drawal_fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Draw fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Origination_Fee__c</fullName>
        <formula>CA_Minimum_Origination_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Percentage__c</fullName>
        <formula>CA_Origination_Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origination Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Origination_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Origination Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Draw_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Source: Client-Account Partner Draw Fee</inlineHelpText>
        <label>Partner Draw Fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Origination_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Source: Client-Account Partner Origination Fee</inlineHelpText>
        <label>Partner Origination Fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_Facility_ID__c</fullName>
        <label>Portal Facility ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Liability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>$User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remittance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <label>Request Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Violation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wire_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wire Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wire_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wire Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Fired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Fired?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllFundingRequests</fullName>
        <columns>Client_Account__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Funding_Requested__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Balance__c</columns>
        <columns>Funding_Transaction_Count__c</columns>
        <columns>MP_External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <columns>Portal_Facility_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Funding Requests</label>
    </listViews>
    <listViews>
        <fullName>FRPendingFundingAllocation</fullName>
        <columns>Client_Account__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Funding_Requested__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Balance__c</columns>
        <columns>Funding_Transaction_Count__c</columns>
        <columns>MP_External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <columns>Portal_Facility_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Unallocated</value>
        </filters>
        <label>FR Pending Funding Allocation</label>
    </listViews>
    <listViews>
        <fullName>FundingRequestsPendingApproval</fullName>
        <columns>Client_Account__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Funding_Requested__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Balance__c</columns>
        <columns>Funding_Transaction_Count__c</columns>
        <columns>MP_External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <columns>Portal_Facility_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Pending,Unallocated</value>
        </filters>
        <label>Funding Requests Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>FundingRequestsPendingTransfer</fullName>
        <columns>Client_Account__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Funding_Requested__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Balance__c</columns>
        <columns>Funding_Transaction_Count__c</columns>
        <columns>MP_External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <columns>Portal_Facility_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Fully Funded</value>
        </filters>
        <label>Funding Requests Pending Transfer</label>
    </listViews>
    <listViews>
        <fullName>FundingRequestsRejected</fullName>
        <columns>Client_Account__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Funding_Requested__c</columns>
        <columns>Funding_Amount__c</columns>
        <columns>Funding_Balance__c</columns>
        <columns>Funding_Transaction_Count__c</columns>
        <columns>MP_External_Id__c</columns>
        <columns>Portal_External_Id__c</columns>
        <columns>Portal_Facility_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Funding Requests Rejected</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>FR_must_be_greater_than_Origination_Fee</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Funding_Requested__c &lt;=0 ,(Applied_Origination_Fee__c + Applied_Draw_Fee__c+IF(Wire_Mode__c = True, Wire_Fee__c ,0))&gt; Funding_Requested__c)</errorConditionFormula>
        <errorMessage>Funding Requested must be greater than 0 and Fees (If any Fee is applied)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Remittance_Flag</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),NOT(ISPICKVAL(Status,&apos;Rejected&apos;)), Remittance__c = False,ISCHANGED(Funding_Requested__c),OR(Client_Account__r.Net_Availability__c = 0,ABS(Client_Account__r.Net_Availability__c) &lt; Funding_Requested__c ))</errorConditionFormula>
        <errorMessage>You can not update the Funding Request for the Client-Account which has the 0 or less Net Availability.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Fees</fullName>
        <active>true</active>
        <errorConditionFormula>Origination_Fee__c = True &amp;&amp; Draw_Fee__c = True</errorConditionFormula>
        <errorMessage>You can not apply both Origination Fee and Draw Fee for single Transaction</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_FundRequested_with_FIU</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNEW()), Remittance__c = True,NOT(Funding_Requested__c &lt;= 0),Funding_Requested__c &gt; ABS(Client_Account__r.Prior_value_of_FIU__c))</errorConditionFormula>
        <errorMessage>Funding Requested Amount must be less than or equal to FIU Balance and greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Mode_Selection</fullName>
        <active>true</active>
        <description>User need to select ACH or Wire</description>
        <errorConditionFormula>ACH_Mode__c = True &amp;&amp; Wire_Mode__c = True</errorConditionFormula>
        <errorMessage>You can not select both ACH and Wire Mode. Please Select one mode.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Mode_change</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(OR(ISPICKVAL(Status,&apos;Funds Transferred&apos;)),OR(ISCHANGED( Wire_Mode__c ),ISCHANGED(  Wire_Fee__c),ISCHANGED( Funding_Requested__c) ,ISCHANGED( Client_Account__c),ISCHANGED( Deal_Acceptance_Date__c),ISCHANGED(Comments__c) ,ISCHANGED(ACH_Mode__c),ISCHANGED( Origination_Fee__c ),ISCHANGED(Draw_Fee__c))),True,False)</errorConditionFormula>
        <errorMessage>You can not change the Mode/Funding Request Information for the Funds Transferred status Funding Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_NetAvailability_for_Update</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNEW()), Remittance__c = False,Funding_Requested__c &gt; Client_Account__r.Net_Availability__c)</errorConditionFormula>
        <errorMessage>You can not update the Funding Request for the Client-Account which has the 0 or less Net Availability.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Partner_Draw_Fee</fullName>
        <active>true</active>
        <errorConditionFormula>Applied_Draw_Fee__c &lt; Actual_Partner_Draw_Fee__c</errorConditionFormula>
        <errorMessage>Partner Draw Fee should be less than the Applied Draw Fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Partner_Origination_Fee</fullName>
        <active>true</active>
        <errorConditionFormula>Applied_Origination_Fee__c &lt; Actual_Partner_Origination_Fee__c</errorConditionFormula>
        <errorMessage>Partner Origination Fee should be less than the Applied Origination Fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Updation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(AND(ISCHANGED(Funding_Requested__c), NOT(ISPICKVAL(Status,&apos;Pending&apos;))),ISCHANGED( Client_Account__c),ISCHANGED( Business_Transaction_Date__c),AND(PRIORVALUE(Comments__c)!= NULL,ISBLANK(Comments__c))),True,False)</errorConditionFormula>
        <errorMessage>You can not change the Client-Account,Funding Requested and you can not delete the Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Updation_of_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND 
( 
Funding_Transaction_Count__c &gt;= 1, 
OR( 
(ISPICKVAL(PRIORVALUE(Status),&apos;Funds Transferred&apos;) &amp;&amp; NOT(ISPICKVAL(Status,&apos;Funds Transferred&apos;))), 
(ISPICKVAL(PRIORVALUE(Status),&apos;Fully Funded&apos;) &amp;&amp; (NOT(ISPICKVAL(Status,&apos;Fully Funded&apos;))&amp;&amp; NOT(ISPICKVAL(Status,&apos;Funds Transferred&apos;)))) 
) 
) 
,True,False)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You can not change the status for this Funding Request. Please delete the Funding Transaction and change the status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Updation_without_comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(Funding_Requested__c),ISCHANGED(Wire_Mode__c),ISCHANGED(ACH_Mode__c),ISCHANGED(Origination_Fee__c),ISCHANGED(Draw_Fee__c)),ISBLANK(Comments__c))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please enter the Comments/Justification for the action.</errorMessage>
    </validationRules>
</CustomObject>